--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-*.iml
 .gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
-/captures
+.idea/*
+.idea/
+*/build/*
+*.iml
+/.app/class_files.txt
+/.app/manifest-merger-production-release-report.txt
+/.app/mapping.txt
+/.app/proguard-project.txt
+/.app/seeds.txt
+/.app/unused.txt
